// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled state 1`] = `
<DocumentFragment>
  <div
    data-testid="permission-matrix"
  />
</DocumentFragment>
`;

exports[`renders minimal configuration 1`] = `
<DocumentFragment>
  <div
    data-testid="permission-matrix"
  />
</DocumentFragment>
`;

exports[`renders with webspace section 1`] = `
<DocumentFragment>
  <h2>
    Webspaces
  </h2>
  <div
    class="selectContainer"
  >
    <div
      data-testid="multi-select"
    >
      exampleexample2example3
    </div>
  </div>
  <div
    class="matrixContainer"
  />
  <div
    data-testid="permission-matrix"
  />
</DocumentFragment>
`;
